# brawl-stars-network

./: .gitignore  Player Tag Collection.ipynb  README.md  SLT2.1-BanaagJasmin-Project_Title.txt  main.py  pyproject.toml
data/: global-brawl-stars-iap-revenue.csv  monthly-downloads.csv
legacy-data/edges/: defeat-brawler-edges-from-aldous.csv  defeat-brawler-edges-from-lex.csv
networks/: losing-network.gephi  winning-network.gephi
notebooks/: Analyzing Network.ipynb  Beginner Detection.ipynb  Business Problem.ipynb  Game Collection-2.ipynb  Game Collection.ipynb  Network Data Generation.ipynb  Player Tag Collection-2.ipynb  Player Tag Collection.ipynb
outputs/: defeat-brawler-edges-from-username.csv  defeat-brawler-nodes-from-lex.csv  defeat-brawler-nodes.csv  player-tags-from-username.csv  player-tags.csv  victory-brawler-edges-from-lex.csv  victory-brawler-edges-from-username.csv  victory-brawler-edges.csv
outputs/cleaned-data/: monthly-data.csv
outputs/graph-data/: brawler-pair-defeats-beginner.csv  brawler-pair-victories-beginner.csv  brawlers.csv  loser-brawler-nodes.csv  losing-edges.csv  winner-brawler-nodes.csv  winning-edges.csv
outputs/graph-data/edges/: losing-edges-beginners.csv  victory-brawler-edges-from-aldous.csv  winning-edges-beginners.csv
outputs/player-tags/: player-tags-from-lex.csv
outputs/processed-network-data/: winner-network-statistics-v1.csv
outputs/trophy-counts/: trophy-counts.csv
