[project]
name = "brawl-stars"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "networkx>=3.4.2",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "scipy>=1.15.3",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
]
